[gd_scene load_steps=3 format=3 uid="uid://4efd2udq0sdi"]

[ext_resource type="Script" path="res://characters/tiny/fly.gd" id="1_upvot"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vqsjp"]
size = Vector2(56, 20)

[node name="Fly" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_upvot")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -28.0
offset_top = -10.0
offset_right = 28.0
offset_bottom = 10.0
color = Color(1, 0.12549, 0.203922, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vqsjp")

[node name="StateTimer" type="Timer" parent="."]
one_shot = true

[node name="WanderTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="StateTimer" to="." method="_on_state_timer_timeout"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
